--- a/HW_EDAII_NurulSucianaAdam.ipynb
+++ b/HW_EDAII_NurulSucianaAdam.ipynb
@@ -723,7 +723,8 @@
    "id": "a0bfff6a",
    "metadata": {},
    "source": [
-    "Interpretation: Unique values of churn contains two (No and Yes) in which 'No' was greater than 'Yes'. It shows that there were 1869 who said 'Yes', roughly 26% who tend to be customer chun. Imbalance was indicated."
+    "Interpretation: \n",
+    "Unique values of churn contains two (No and Yes) in which 'No' was greater than 'Yes'. It shows that there were 1869 who said 'Yes', roughly 26% who tend to be customer chun. Imbalance was indicated."
    ]
   },
   {
@@ -948,6 +949,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a8b717e",
+   "metadata": {},
+   "source": [
+    "So far, we can claim that\n",
+    "1. 'TotalCharges' has skewed distribution.\n",
+    "2. 'Tenure' and 'Monthlycharges' form a bimodal distribution (two peaks) meaning that we need modus to distribute the spread of data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "593f45f0",
    "metadata": {},
    "source": [
@@ -1074,16 +1085,6 @@
    "source": [
     "# pairplot of the data\n",
     "sns.pairplot(teleco_data, hue=\"Churn\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9706ad1d",
-   "metadata": {},
-   "source": [
-    "So far, we can claim that\n",
-    "1. 'TotalCharges' has skewed distribution.\n",
-    "2. 'Tenure' and 'Monthlycharges' form a bimodal distribution (two peaks) meaning that we need modus to distribute the spread of data. "
    ]
   },
   {
